Add persisted user dark mode (#8)
